src/css/style.css
/* ... */
.modal-show {
  display: block;
}

.portfolio__content {
  position: absolute;
  margin: 1.5em;
  background-color: var(--clr-light);
  color: var(--fc-dark);
  border-radius: 0.25em;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  text-align: left;
  padding: 2em;
  overflow: scroll;
}

.portfolio__content > div {
  overflow-y: auto;
  height: 100%;
}

.portfolio__content > div > div {
  user-select: none;
  margin-top: 0.5em;
  line-height: 1.4;
}

.portfolio__content ul {
  margin: 0.5em 0;
  padding-left: 1.25em;
  list-style: circle;
}

.portfolio__item {
  position: relative;
  background-color: var(--clr-accent);
  overflow: hidden;
}

.portfolio__title {
  position: absolute;
  top: calc(50% - 1.5em);
  width: 100%;
  color: var(--fc-light);
  font-weight: var(--fw-bold);
  font-size: var(--fs-h3);
}

.portfolio__img {
  aspect-ratio: 3/2;
  transition:
    transform 750ms cubic-bezier(0.5, 0, 0.5, 1),
    opacity 200ms linear;
}

.portfolio__item:focus {
  z-index: 2;
}

.portfolio__img:hover,
.portfolio__item:focus .portfolio__img {
  transform: scale(1.2);
  opacity: 0.45;
}

@media (min-width: 600px) {
  .portfolio {
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  }
}

@media (min-width: 800px) {
  .portfolio__content {
    margin: 3em;
  }
}

/* Contact me section */

.contact-me {
  max-width: 1000px;
  margin: 0 auto;
}

.contact-me__form {
  display: flex;
  flex-direction: column;
  padding: 5px;
}

.contact-me__form.hide {
  display: none;
}

.contact-me__form label,
.contact-me__form input,
.contact-me__form textarea {
  transition: all 0.2s;
  touch-action: manipulation;
}

.contact-me__form input,
.contact-me__form textarea,
.contact-me__form button {
  margin: 1em 0 0.25em;
}

.contact-me__form label,
.contact-me__form button {
  font-weight: var(--fw-bold);
}

.contact-me__form input,
.contact-me__form textarea {
  cursor: text;
  border: 0;
  outline: 1px solid var(--fc-dark);
  outline-offset: 4px;
  color: var(--fc-dark);
  background-color: transparent;
}

.contact-me__form textarea {
  resize: none;
}

.contact-me__form input + label,
.contact-me__form textarea + label {
  transform: translate(0, -1.6rem);
  width: fit-content;
  color: var(--fc-dark);
}

.contact-me__form textarea + label {
  transform: translate(0, -6.2rem);
}

.contact-me__form input:focus + label,
.contact-me__form textarea:focus + label {
  cursor: text;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  transform-origin: left top;
  transform: translate(0, -3.1rem);
}

.contact-me__form textarea:focus + label {
  transform: translate(0, -7.75rem);
}

.contact-me__form button {
  color: var(--fc-dark);
  background-color: var(--clr-accent);
  font-size: 1.5rem;
  padding: 0.5em;
  border: 0;
  margin-bottom: 1.5em;
  text-transform: uppercase;
  cursor: pointer;
}

.contact-me__form button:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.contact-me__success {
  margin: 6.5em 0;
}

.contact-me__success b {
  padding-right: 0.25em;
}

.contact-me__img {
  box-shadow: var(--bs);
}

@media (min-width: 600px) {
  .contact-me {
    display: grid;
    grid-template-columns: 1fr 200px;
    grid-template-areas:
      "title img"
      "subtitle img"
      "text img";
    grid-column-gap: 2em;
  }

  .section__title--contact {
    grid-area: title;
  }

  .section__subtitle--contact {
    grid-column: 1 / -1;
    grid-row: 2;
    position: relative;
    left: -1em;
    width: calc(100% + 2em);
    padding-left: 1em;
    padding-right: calc(200px + 4em);
  }

  .contact-me__img {
    grid-area: img;
    position: relative;
    z-index: 2;
  }
}

@media (min-width: 800px) {
  .contact-me__form input + label,
  .contact-me__form textarea + label {
    transform: translate(0, -2.1rem);
  }

  .contact-me__form textarea + label {
    transform: translate(0, -8rem);
  }

  .contact-me__form input:focus + label,
  .contact-me__form textarea:focus + label {
    transform: translate(0, -3.8rem);
  }

  .contact-me__form textarea:focus + label {
    transform: translate(0, -9.75rem);
  }
}

/* Footer */

.footer {
  background-color: var(--clr-dark);
  color: var(--clr-accent);
  text-align: center;
  padding: 1.25em 0;
  line-height: 1;
  font-size: var(--fs-h3);
}

.footer a {
  color: inherit;
  text-decoration: none;
}

.social-list {
  list-style: none;
  display: flex;
  justify-content: center;
  margin: 0;
  padding: 0;
}

.social-list__item {
  margin: 0 0.5em;
  width: 1.25em;
}

.social-list__link .icon-social {
  transition:
    var(--std-transform),
    opacity 200ms linear;
}

.social-list__link:hover .icon-social {
  transform: translateY(-0.25em);
  opacity: 0.8;
}

.footer-list {
  display: flex;
  flex-direction: column;
  list-style-type: none;
  margin: 1em 0.5em 0;
  padding: 0;
  font-size: 1rem;
  text-align: left;
}

.footer-list_item {
  margin: 0.25em;
  padding: 0.25em 0.5em;
  flex-basis: 100%;
  white-space: nowrap;
}

.footer-list_item a:hover {
  text-decoration: overline;
}

.footer-list_item.copy {
  color: var(--clr-dark-gray);
}

@media (min-width: 600px) {
  .footer-list {
    flex-direction: row;
    margin: 2em 1em 0;
    text-align: center;
  }

  .footer-list_item {
    margin: 0;
    padding: 0.25em 0.5em;
    flex-basis: 100%;
    white-space: nowrap;
  }
}

